--- a/readme
+++ b/readme
@@ -1,7 +1,3 @@
-Absolutely! Here's a clean and well-structured `README.md` file including all your video demo links:
-
----
-
 # Dynamic Non-Customizable WordPress Theme
 
 ## Overview
@@ -66,12 +62,4 @@ Here are detailed video walkthroughs of the project:
 
 - WordPress 5.0+
 - PHP 7.4+
-- MySQL 5.6+ or MariaDB 10.1+
-
-## License
-
-This project is licensed under the [MIT License](LICENSE).
-
----
-
-**Would you like me to create the actual `README.md` file ready to use and share it as a downloadable file?**
+- MySQL 5.6+ 
